# Union-Budget-RAG

./: README.md  main.py  pyproject.toml  requirements.txt
db/union_budget_vectors/b167d7d7-fbc5-4318-ab6f-b3153a4c0b4a/: index_metadata.pickle
notebooks/: union-budget-rag.ipynb
