[project]
name = "testing-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "langchain[chains]>=1.2.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "pypdf2>=3.0.1",
    "notebook>=7.5.2",
    "pypdf>=6.6.0",
]
